syntax = "proto3";

//option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";

package mainflow;

// The greeting service definition.
service FileService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string client_name = 1;
  string file_name = 2;
  bytes data = 3;
}

message NewImageRequest {
  string name = 1;
  string value = 2;
  bytes data = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int32 status = 2;
  string replay_data = 3;
}